change advanced for widget

--- a/index.html
+++ b/index.html
@@ -577,14 +577,14 @@ $ ipython notebook
 
                     <section>
                         <h3 style="text-align:center">Exercises</h3>
-                        <p>1.8 Animate Advanced</p>
+                        <p>1.8 Animate Widgets</p>
                         <p><b>[OPTION A] Add a play and stop button</b><br>
                         <p><b>[OPTION B] Add sliders to select the year and month</b><br>
                         <h6 style='text-align:right'>15 min</h6>
                     </section>
                     <section>
                         <h3 style="text-align:center">Exercises</h3>
-                        <p>1.8 Animate Advanced</p>
+                        <p>1.8 Animate Widgets</p>
                         <div align="center">
                     </section>
 
